syntax = "proto3";
//option cc_enable_arenas = true;

import "ydb/public/api/protos/ydb_issue_message.proto";
import "ydb/public/api/protos/ydb_status_codes.proto";

package Ydb.Impl;
message ReadTableResponse {
    StatusIds.StatusCode status = 1;
    repeated Ydb.Issue.IssueMessage issues = 2;
    ReadTableSnapshot snapshot = 4;
    ReadTableResult result = 3;
};

message ReadTableSnapshot {
    uint64 plan_step = 1;
    uint64 tx_id = 2;
}

message ReadTableResult {
    bytes result_set = 1;
};
